--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,11 @@
 h1 {
   font-family: "Imbue", sans-serif;
   text-transform: uppercase;
-  font-size: 4rem;
+  font-size: 3rem;
   background: -webkit-linear-gradient(140deg, #ff3162, #ff5c00);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  cursor: default;
 }
 
 .partials {
