--- a/src/components/ImageField.css
+++ b/src/components/ImageField.css
@@ -1,5 +1,14 @@
 .image-box {
-  background: #ddd;
+  background-color: #242424;
+  opacity: 1;
+  background-size: 4px 4px;
+  background-image: repeating-linear-gradient(
+    45deg,
+    #4a4a4a 0,
+    #4a4a4a 0.4px,
+    #242424 0,
+    #242424 50%
+  );
   min-height: 20rem;
   max-height: 100%;
   border-radius: 5px;
@@ -9,4 +18,17 @@
   cursor: pointer;
   margin-bottom: 1rem;
   padding: 20px;
+}
+
+.circle {
+  background-color: #ffffff6e;
+  width: 50px;
+  height: 50px;
+  padding-left: 3px;
+  border-radius: 5px;
+  transition: 0.5s;
+}
+
+.circle:hover {
+  background-color: rgba(255, 255, 255, 0.765);
 }
